FEAT: se agregaron comentarios

--- a/Laboratorio02/Lab02.ipynb
+++ b/Laboratorio02/Lab02.ipynb
@@ -100,6 +100,7 @@
     "\n",
     "            etiqueta = etiqueta.lower()  # Normalizar etiquetas a minúsculas\n",
     "\n",
+    "\n",
     "            mensaje = re.sub(\n",
     "                r\"[^a-zA-Z0-9\\s]\", \"\", mensaje\n",
     "            ).lower()  # Quitar caracteres especiales\n",
@@ -116,9 +117,7 @@
     "# Cargar y limpiar el dataset\n",
     "\n",
     "\n",
-    "\n",
     "ruta_dataset = \"entrenamiento.txt\"\n",
-    "\n",
     "\n",
     "\n",
     "mensajes, etiquetas = cargar_y_limpiar_dataset(ruta_dataset)"
@@ -160,6 +159,7 @@
     "\n",
     "    # Inicializar conteos y probabilidades\n",
     "\n",
+    "\n",
     "    conteo_palabras = {clase: {} for clase in [0, 1]}\n",
     "\n",
     "    total_palabras = {clase: 0 for clase in [0, 1]}\n",
@@ -169,6 +169,7 @@
     "\n",
     "    for clase in [0, 1]:\n",
     "\n",
+    "\n",
     "        mensajes_clase = [X[i] for i in range(len(X)) if y[i] == clase]\n",
     "\n",
     "        total_mensajes = len(mensajes_clase)\n",
@@ -177,6 +178,7 @@
     "\n",
     "\n",
     "        for mensaje in mensajes_clase:\n",
+    "\n",
     "\n",
     "            for palabra in mensaje.split():\n",
     "\n",
@@ -196,7 +198,6 @@
     "# Calcular probabilidades para el modelo\n",
     "\n",
     "\n",
-    "\n",
     "vocabulario, vocab_size, conteo_palabras, total_palabras, prob_clase = (\n",
     "    calcular_probabilidades(X_train, y_train)\n",
     ")\n",
@@ -213,6 +214,7 @@
     "    for mensaje in X:\n",
     "\n",
     "        probabilidades = {}\n",
+    "\n",
     "\n",
     "        for clase in [0, 1]:\n",
     "\n",
@@ -301,6 +303,7 @@
     "\n",
     "    # Inicializar conteos y probabilidades\n",
     "\n",
+    "\n",
     "    conteo_palabras = {clase: {} for clase in [0, 1]}\n",
     "\n",
     "    total_palabras = {clase: 0 for clase in [0, 1]}\n",
@@ -310,6 +313,7 @@
     "\n",
     "    for clase in [0, 1]:\n",
     "\n",
+    "\n",
     "        mensajes_clase = [X[i] for i in range(len(X)) if y[i] == clase]\n",
     "\n",
     "        total_mensajes = len(mensajes_clase)\n",
@@ -318,6 +322,7 @@
     "\n",
     "\n",
     "        for mensaje in mensajes_clase:\n",
+    "\n",
     "\n",
     "            for palabra in mensaje.split():\n",
     "\n",
@@ -920,6 +925,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 3.2 - Support Vector Machine\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
@@ -1181,7 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 3.2\n"
+    "# Task 3.2 - Árboles de Decisión\n"
    ]
   },
   {
@@ -1780,7 +1792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La implementación manual obtuvo un accuracy en prueba ligeramente superior 0.7166 vs. 0.7146, lo que indica un mejor rendimiento en generalización a nuevos datos. Sin embargo, la implementación con librerías fue mejor en validación 0.7146 vs. 0.7085, probablemente por ajustes más precisos en el modelo. En resumen, la implementación manual destacó en prueba, pero la de librerías es más consistente y escalable debido a la optimización automatizada.\n"
+    "La implementación manual obtuvo un accuracy en prueba ligeramente superior 0.7166 vs. 0.7146, lo que indica un mejor rendimiento en generalización a nuevos datos. Sin embargo, la implementación con librerías fue mejor en validación 0.7146 vs. 0.7085, probablemente por ajustes más precisos en el modelo. En resumen, la implementación manual destacó en prueba, pero la de librerías es más consistente y escalable debido a la optimización automatizada.\n"
    ]
   },
   {
