Feat: task marked

--- a/Laboratorio03/Lab3.ipynb
+++ b/Laboratorio03/Lab3.ipynb
@@ -40,7 +40,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2 y 2.1"
+    "# Task 2 y 2.1 Gradiente Descendiente Estocástico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2.2  Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 3 Perceptrón"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referencias:"
    ]
   }
  ],
