Feat: Referrencias agregadas

--- a/Laboratorio03/Lab3.ipynb
+++ b/Laboratorio03/Lab3.ipynb
@@ -576,7 +576,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Referencias:"
+    "## Referencias:\n",
+    "\n",
+    "- Libretexts. (2024, March 17). 6: Optimización y Método del Gradiente Descendiente. Mathematics LibreTexts. https://math.libretexts.org/Courses/Universidad_Complutense_de_Madrid/Las_matematicas_de_la_inteligencia_artificial/06%3A_Optimizacion_y_Metodo_del_Gradiente_Descendiente#:~:text=M%C3%A9todo%20del%20gradiente%20descendente%20estoc%C3%A1stico,-Este%20m%C3%A9todo%20trata&text=Esto%20permite%20escapar%20de%20los,acabar%20llegando%20al%20m%C3%ADnimo%20global.&text=Bt%20es%20el%20subset,estuviera%20minimizando%20una%20p%C3%A9rdida%20distinta.\n",
+    "\n",
+    "- GeeksforGeeks. (2024, July 3). Optimal feature selection for Support Vector Machines. GeeksforGeeks. https://www.geeksforgeeks.org/optimal-feature-selection-for-support-vector-machines/\n",
+    "\n"
    ]
   }
  ],
