FeatL pts extra

--- a/Laboratorio03/Lab3.ipynb
+++ b/Laboratorio03/Lab3.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 25% Extra en el lab. Pregunten a Alberto Suriano Para confirmar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 1 - Preguntas Teóricas\n",
     "\n",
     "1. Explique la diferencia entre descenso de gradiente, descenso de gradiente por mini batches y descenso de \n",
