--- a/Laboratorio03/Lab3.ipynb
+++ b/Laboratorio03/Lab3.ipynb
@@ -110,7 +110,28 @@
     "\n",
     "3. Describa la arquitectura y el funcionamiento de un perceptrón de una sola capa (un tipo de red neuronal sin backpropagation). Explique cómo aprende y la forma en la que actualiza sus parámetros.\n",
     "\n",
-    "   R//\n"
+    "   R// \n",
+    "   \n",
+    "   El perceptron tiene una capa de entrada y una neurona de salida. \n",
+    "    - Entradas: Cada caracteristica se introduce en el perceptron\n",
+    "    - Pesos: Cada $x_i$ se multiplica por un peso $w_i$ y ademas se incluye un sesgo $b$.\n",
+    "        $$z=\\sum^n_{i=1}w_ix_i+b$$\n",
+    "    - Función de Activación: se aplica una función de activación para determinar la salida. $y=f(z)$\n",
+    "    - Esta varía entre 1  y o, siendo el valor 1 la representación de superación de umbral.\n",
+    "\n",
+    "\n",
+    "#### Aprendizaje\n",
+    "  -  Para predeci, se calcula la salid ay usando la suma ponderada y la función de activación.\n",
+    "  - Esta salida se compara con el targe \n",
+    "  - Se actualixa el perceptrón si: \n",
+    "    - Si se casifica correctamente  $y=t$ no se modifica nada\n",
+    "    - Si hay un error $y!=t$ se actualizan los pesos y el sesgo de manera que: \n",
+    "    $$w_i \\leftarrow w_i + \\eta (t=y)x_i$$ para cada i,\n",
+    "    $$b \\leftarrow b + \\eta (t=y)$$\n",
+    "donde $\\eta$ es la tasa de aprendizaje que controla el ajuste, y $t-y$ es el error , indicando la magnitud y dirección del ajuste. \n",
+    "\n",
+    "Esto se repite hasta que los errores se minimicen o se alcance un máximo de iteraciones.\n",
+    "\n"
    ]
   },
   {
