FEAT: Se terminaron de contestar las preguntas de la Task 1

--- a/Laboratorio03/Lab3.ipynb
+++ b/Laboratorio03/Lab3.ipynb
@@ -88,50 +88,82 @@
     "\n",
     "- **Extracción de Características (Feature Extraction)**\n",
     "\n",
-    "  - Transforma los datos originales en nuevas características derivadas que capturan mejor la información relevante.\n",
-    "  - Se utiliza cuando los datos tienen una alta dimensionalidad y es necesario reducir su tamaño sin perder información clave.\n",
-    "  - Ejemplo de técnicas: Análisis de Componentes Principales (PCA), Autoencoders, Transformada de Fourier, Transformada de Ondas (Wavelet Transform).\n",
-    "  - Ejemplo de aplicación: En procesamiento de imágenes, donde se puede reducir la cantidad de píxeles utilizando PCA para capturar solo los patrones más relevantes.\n",
+    "Transforma los datos originales en nuevas características derivadas que capturan mejor la información relevante. Además, se utiliza cuando los datos tienen una alta dimensionalidad y es necesario reducir su tamaño sin perder información clave.\n",
+    "\n",
+    "- Ejemplo de técnicas:\n",
+    "  - Análisis de Componentes Principales (PCA)\n",
+    "  - Autoencoders\n",
+    "  - Transformada de Fourier\n",
+    "  - Transformada de Ondas (Wavelet Transform)\n",
+    "- Ejemplo de aplicación:\n",
+    "\n",
+    "  - En procesamiento de imágenes, donde se puede reducir la cantidad de píxeles utilizando PCA para capturar solo los patrones más relevantes.\n",
     "\n",
     "- **Selección de Características (Feature Selection)**\n",
     "\n",
-    "  - Identifica y selecciona un subconjunto de características relevantes del conjunto original sin modificar su estructura.\n",
-    "  - Se usa cuando hay características redundantes o irrelevantes que pueden afectar negativamente el rendimiento del modelo.\n",
-    "  - Métodos comunes: Filtro (correlación, chi-cuadrado, información mutua), Wrapper (RFE, Forward/Backward Selection), Basados en modelos (árboles de decisión, LASSO).\n",
-    "  - Ejemplo de aplicación: En análisis de datos de salud, donde algunos biomarcadores pueden no ser relevantes para una enfermedad en particular y eliminarlos mejora el modelo.\n",
+    "Identifica y selecciona un subconjunto de características relevantes del conjunto original sin modificar su estructura. Asimismo, se usa cuando hay características redundantes o irrelevantes que pueden afectar negativamente el rendimiento del modelo.\n",
     "\n",
-    "  | Características         | Feature Extraction                                                     | Feature Selection                                       |\n",
-    "  | ----------------------- | ---------------------------------------------------------------------- | ------------------------------------------------------- |\n",
-    "  | Enfoque                 | Crea nuevas variables a partir de las originales                       | Elige un subconjunto de las características existentes  |\n",
-    "  | Transformación de datos | Sí, transforma los datos en un nuevo espacio                           | No, mantiene las características originales             |\n",
-    "  | Uso en modelos          | Útil para reducir dimensionalidad en datos complejos                   | Mejora interpretabilidad y evita sobreajuste            |\n",
-    "  | Ejemplo de técnica      | PCA, Autoencoders, Transformadas                                       | RFE, LASSO, Árboles de Decisión                         |\n",
-    "  | Ejemplo de aplicación   | Procesamiento de imágenes, NLP (reducción de dimensionalidad de texto) | Análisis biomédico, selección de variables en regresión |\n",
+    "- Métodos comunes:\n",
+    "  - Filtro (correlación, chi-cuadrado, información mutua)\n",
+    "  - Wrapper (RFE, Forward/Backward Selection)\n",
+    "  - Basados en modelos (árboles de decisión, LASSO)\n",
+    "- Ejemplo de aplicación:\n",
+    "  - En análisis de datos de salud, donde algunos biomarcadores pueden no ser relevantes para una enfermedad en particular y eliminarlos mejora el modelo.\n",
+    "\n",
+    "| Características         | Feature Extraction                                                     | Feature Selection                                       |\n",
+    "| ----------------------- | ---------------------------------------------------------------------- | ------------------------------------------------------- |\n",
+    "| Enfoque                 | Crea nuevas variables a partir de las originales                       | Elige un subconjunto de las características existentes  |\n",
+    "| Transformación de datos | Sí, transforma los datos en un nuevo espacio                           | No, mantiene las características originales             |\n",
+    "| Uso en modelos          | Útil para reducir dimensionalidad en datos complejos                   | Mejora interpretabilidad y evita sobreajuste            |\n",
+    "| Ejemplo de técnica      | PCA, Autoencoders, Transformadas                                       | RFE, LASSO, Árboles de Decisión                         |\n",
+    "| Ejemplo de aplicación   | Procesamiento de imágenes, NLP (reducción de dimensionalidad de texto) | Análisis biomédico, selección de variables en regresión |\n",
     "\n",
     "3. Describa la arquitectura y el funcionamiento de un perceptrón de una sola capa (un tipo de red neuronal sin backpropagation). Explique cómo aprende y la forma en la que actualiza sus parámetros.\n",
     "\n",
-    "   R// \n",
-    "   \n",
-    "   El perceptron tiene una capa de entrada y una neurona de salida. \n",
-    "    - Entradas: Cada caracteristica se introduce en el perceptron\n",
-    "    - Pesos: Cada $x_i$ se multiplica por un peso $w_i$ y ademas se incluye un sesgo $b$.\n",
-    "        $$z=\\sum^n_{i=1}w_ix_i+b$$\n",
-    "    - Función de Activación: se aplica una función de activación para determinar la salida. $y=f(z)$\n",
-    "    - Esta varía entre 1  y o, siendo el valor 1 la representación de superación de umbral.\n",
+    "   R//\n",
     "\n",
+    "   Un perceptrón de una sola capa es un tipo de red neuronal artificial simple, compuesta por:\n",
+    "\n",
+    "   - Capa de entrada: Recibe las características de los datos\n",
+    "   - Pesos: Cada entrada $x_i$ tiene un peso asociado $w_i$, además de un sesgo $b$.\n",
+    "   - Neurona de salida: Calcula la salida basada en la suma ponderada de las entradas y la aplica a una función de activación.\n",
+    "\n",
+    "La ecuación que define la salida neta del perceptrón es:\n",
+    "\n",
+    "$$z=\\sum^n_{i=1}w_ix_i+b$$\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "- $x_i$ son las características de entrada.\n",
+    "- $w_i$ son los pesos asociados a cada entrada.\n",
+    "- $b$ es el sesgo.\n",
+    "\n",
+    "Luego, la salida final se obtiene aplicando una función de activación para determinar la salida. En un perceptrón simple, se usa la función escalón, que devuelve:\n",
+    "\n",
+    "$$y = \\begin{cases} 1, & \\text{si } z \\geq 0 \\\\ 0, & \\text{si } z < 0 \\end{cases}$$\n",
+    "\n",
+    "Tomando que $y=f(z)$.\n",
+    "\n",
+    "Esto significa que el perceptrón solo puede clasificar datos en dos categorías (binario).\n",
     "\n",
     "#### Aprendizaje\n",
-    "  -  Para predeci, se calcula la salid ay usando la suma ponderada y la función de activación.\n",
-    "  - Esta salida se compara con el targe \n",
-    "  - Se actualixa el perceptrón si: \n",
-    "    - Si se casifica correctamente  $y=t$ no se modifica nada\n",
-    "    - Si hay un error $y!=t$ se actualizan los pesos y el sesgo de manera que: \n",
-    "    $$w_i \\leftarrow w_i + \\eta (t=y)x_i$$ para cada i,\n",
-    "    $$b \\leftarrow b + \\eta (t=y)$$\n",
-    "donde $\\eta$ es la tasa de aprendizaje que controla el ajuste, y $t-y$ es el error , indicando la magnitud y dirección del ajuste. \n",
     "\n",
-    "Esto se repite hasta que los errores se minimicen o se alcance un máximo de iteraciones.\n",
-    "\n"
+    "- Para predecir, se calcula la salida $y$ usando la suma ponderada y la función de activación.\n",
+    "- Esta salida se compara con el valor esperado $t$ (target).\n",
+    "- Se actualiza el perceptrón si:\n",
+    "\n",
+    "  - Si se clasifica correctamente $y=t$ no se modifica nada.\n",
+    "  - Si hay un error $y \\neq t$ se actualizan los pesos y el sesgo de manera que:\n",
+    "\n",
+    "    - Actualización de pesos:\n",
+    "      $w_i \\leftarrow w_i + \\eta (t-y)x_i$ para cada i\n",
+    "\n",
+    "    - Actualización del sesgo:\n",
+    "      $b \\leftarrow b + \\eta (t-y)$\n",
+    "\n",
+    "Donde $\\eta$ es la tasa de aprendizaje que controla el ajuste, y $t-y$ es el error, indicando la magnitud y dirección del ajuste.\n",
+    "\n",
+    "Esto se repite hasta que los errores se minimicen o se alcance un máximo de iteraciones.\n"
    ]
   },
   {
@@ -873,7 +905,11 @@
     "\n",
     "- Libretexts. (2024, March 17). 6: Optimización y Método del Gradiente Descendiente. Mathematics LibreTexts. https://math.libretexts.org/Courses/Universidad_Complutense_de_Madrid/Las_matematicas_de_la_inteligencia_artificial/06%3A_Optimizacion_y_Metodo_del_Gradiente_Descendiente#:~:text=M%C3%A9todo%20del%20gradiente%20descendente%20estoc%C3%A1stico,-Este%20m%C3%A9todo%20trata&text=Esto%20permite%20escapar%20de%20los,acabar%20llegando%20al%20m%C3%ADnimo%20global.&text=Bt%20es%20el%20subset,estuviera%20minimizando%20una%20p%C3%A9rdida%20distinta.\n",
     "\n",
-    "- GeeksforGeeks. (2024, July 3). Optimal feature selection for Support Vector Machines. GeeksforGeeks. https://www.geeksforgeeks.org/optimal-feature-selection-for-support-vector-machines/\n"
+    "- GeeksforGeeks. (2024, July 3). Optimal feature selection for Support Vector Machines. GeeksforGeeks. https://www.geeksforgeeks.org/optimal-feature-selection-for-support-vector-machines/\n",
+    "\n",
+    "- pyninja. (2024, 17 marzo). Gradiente Descendente: Batch vs Estocástico vs Mini-batch | Deep Learning 101 [Vídeo]. YouTube. https://www.youtube.com/watch?v=Bap0WNIaYHQ\n",
+    "\n",
+    "- toolify.ai. (2024, 4 marzo). Descenso del Gradiente Estocástico vs Descenso del Gradiente: ¿Cuál es el mejor?. https://www.toolify.ai/es/ai-news-es/descenso-del-gradiente-estocstico-vs-descenso-del-gradiente-cul-es-el-mejor-2361431\n"
    ]
   }
  ],
