Feat: csv added

--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -49,6 +49,20 @@
     "\n",
     "        R//"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2 y 2.1 - K-Means y Segmentación de Clientes de Banco"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.1.1 - K-Means"
+   ]
   }
  ],
  "metadata": {
