FEAT: conclusion task 2.1

--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -508,6 +508,29 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conlusion\n",
+    "\n",
+    "### El modelo de K-Means con librerías es mejor, ya que obtuvo un coeficiente de silueta de 0.8417, mientras que la implementación sin librerías obtuvo 0.7791. Un coeficiente de silueta más alto indica que los clusters están mejor separados y son más compactos internamente. La diferencia se debe a que sklearn.KMeans utiliza optimizaciones avanzadas en Cython y técnicas como k-means++ para una mejor inicialización de centroides, lo que mejora la calidad del clustering y reduce la variabilidad en los resultados. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2.2 - Mixture Modelos y Segmentación de Clientes de Banco Task 2.2.1 - Mixture Models "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
