--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -248,6 +248,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definición de métrica de desempeño principal\n",
+    "### Se utilizará el coeficiente de silueta porque mide qué tan bien separados y compactos están los clusters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -526,11 +534,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Definición de métrica de desempeño principal\n",
+    "### Se utilizará el coeficiente de silueta porque mide qué tan bien separados y compactos están los clusters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementación de Mixture Models (Sin Librerías)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Referencias\n",
+    "\n",
+    "- RPubs - Informe #4: PCA y K-Means. (s. f.). https://rpubs.com/CarlosRodriguez_/841592\n",
+    "\n",
+    "- Ramirez, J. (2021, 7 diciembre). K-means: Elbow Method and Silhouette - Jonathan Ramirez - Medium. Medium. https://medium.com/@jonathanrmzg/k-means-elbow-method-and-silhouette-e565d7ab87aa\n",
+    "\n",
+    "- ¿Qué es una red neuronal? - Explicación de las redes neuronales artificiales - AWS. (s. f.). Amazon Web Services, Inc. https://aws.amazon.com/es/what-is/neural-network/\n",
+    "\n",
+    "- Unir, V. (2024, 8 octubre). ¿Qué es el algoritmo backpropagation para el entrenamiento de redes neuronales? UNIR. https://www.unir.net/revista/ingenieria/backpropagation/\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
