--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -537,6 +537,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mixture Models (Sin librerías)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Definición de métrica de desempeño principal\n",
     "### Se utilizará el coeficiente de silueta porque mide qué tan bien separados y compactos están los clusters."
    ]
@@ -545,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementación de Mixture Models (Sin Librerías)"
+    "# Implementación de Mixture Models (Con Librerías)"
    ]
   },
   {
