FEAT: Se agregaron títulos

--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -567,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conlusion\n",
+    "# Conclusion\n",
     "\n",
     "### El modelo de K-Means con librerías es mejor, ya que obtuvo un coeficiente de silueta de 0.8417, mientras que la implementación sin librerías obtuvo 0.7791. Un coeficiente de silueta más alto indica que los clusters están mejor separados y son más compactos internamente. La diferencia se debe a que sklearn.KMeans utiliza optimizaciones avanzadas en Cython y técnicas como k-means++ para una mejor inicialización de centroides, lo que mejora la calidad del clustering y reduce la variabilidad en los resultados.\n"
    ]
@@ -604,12 +604,10 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "\n",
     "# Clase MixtureModels (EM) SIN librerías adicionales\n",
     "\n",
     "\n",
     "class MixtureModels:\n",
-    "\n",
     "\n",
     "    def __init__(self, k=3, max_iter=1000, tol=1e-5, random_state=None):\n",
     "\n",
@@ -619,35 +617,28 @@
     "        self.tol = tol\n",
     "        self.random_state = random_state\n",
     "\n",
-    "\n",
     "    def _initialize(self, X):\n",
     "\n",
     "        self.n_samples, self.n_features = X.shape\n",
-    "\n",
     "\n",
     "        self.weights = np.ones(self.k) / self.k\n",
     "\n",
     "        if self.random_state is not None:\n",
     "            np.random.seed(self.random_state)\n",
     "\n",
-    "\n",
     "        indices = np.random.choice(self.n_samples, self.k, replace=False)\n",
-    "\n",
     "\n",
     "        self.means = X[indices]\n",
     "\n",
     "        self.covs = [np.eye(self.n_features) for _ in range(self.k)]\n",
     "\n",
-    "\n",
     "    def _gaussian_pdf(self, X, mean, cov):\n",
-    "\n",
     "\n",
     "        reg = 1e-6  # término de regularización\n",
     "\n",
     "        cov_reg = cov + reg * np.eye(self.n_features)\n",
     "\n",
     "        det_cov = np.linalg.det(cov_reg)\n",
-    "\n",
     "\n",
     "        norm_const = 1.0 / (((2 * np.pi) ** (self.n_features / 2)) * (det_cov**0.5))\n",
     "\n",
@@ -659,13 +650,11 @@
     "\n",
     "        return norm_const * exponent\n",
     "\n",
-    "\n",
     "    def _e_step(self, X):\n",
     "\n",
     "        self.responsibilities = np.zeros((self.n_samples, self.k))\n",
     "\n",
     "        for j in range(self.k):\n",
-    "\n",
     "\n",
     "            self.responsibilities[:, j] = self.weights[j] * self._gaussian_pdf(\n",
     "                X, self.means[j], self.covs[j]\n",
@@ -677,11 +666,9 @@
     "            np.sum(self.responsibilities, axis=1, keepdims=True) + eps\n",
     "        )\n",
     "\n",
-    "\n",
     "    def _m_step(self, X):\n",
     "\n",
     "        N_k = np.sum(self.responsibilities, axis=0)\n",
-    "\n",
     "\n",
     "        self.means = np.dot(self.responsibilities.T, X) / N_k[:, np.newaxis]\n",
     "\n",
@@ -689,16 +676,13 @@
     "\n",
     "            diff = X - self.means[j]\n",
     "\n",
-    "\n",
     "            self.covs[j] = (\n",
     "                np.dot((self.responsibilities[:, j][:, np.newaxis] * diff).T, diff)\n",
     "                / N_k[j]\n",
     "            )\n",
     "        self.weights = N_k / self.n_samples\n",
     "\n",
-    "\n",
     "    def log_likelihood(self, X):\n",
-    "\n",
     "\n",
     "        n_samples = X.shape[0]\n",
     "\n",
@@ -713,7 +697,6 @@
     "        eps = 1e-10\n",
     "\n",
     "        return np.sum(np.log(np.sum(likelihoods, axis=1) + eps))\n",
-    "\n",
     "\n",
     "    def fit(self, X):\n",
     "\n",
@@ -740,12 +723,10 @@
     "        return np.argmax(self.responsibilities, axis=1)\n",
     "\n",
     "\n",
-    "\n",
     "# Funciones para validación cruzada\n",
     "\n",
     "\n",
     "def create_folds(X, n_folds, random_state=None):\n",
-    "\n",
     "\n",
     "    n_samples = X.shape[0]\n",
     "\n",
@@ -754,9 +735,7 @@
     "    if random_state is not None:\n",
     "        np.random.seed(random_state)\n",
     "\n",
-    "\n",
     "    np.random.shuffle(indices)\n",
-    "\n",
     "\n",
     "    fold_sizes = (n_samples // n_folds) * np.ones(n_folds, dtype=int)\n",
     "\n",
@@ -773,7 +752,6 @@
     "        current += fold_size\n",
     "\n",
     "    return folds\n",
-    "\n",
     "\n",
     "\n",
     "def cross_validation_log_likelihood(\n",
@@ -794,7 +772,6 @@
     "\n",
     "        X_val = X[val_indices]\n",
     "\n",
-    "\n",
     "        model = MixtureModels(\n",
     "            k=k, max_iter=max_iter, tol=tol, random_state=random_state\n",
     "        )\n",
@@ -806,7 +783,6 @@
     "        log_likelihoods.append(ll_val)\n",
     "\n",
     "    return np.mean(log_likelihoods)\n",
-    "\n",
     "\n",
     "\n",
     "def choose_best_k(\n",
@@ -824,7 +800,6 @@
     "        if random_state is not None:\n",
     "            np.random.seed(random_state)\n",
     "\n",
-    "\n",
     "        indices = np.random.choice(X.shape[0], sample_size, replace=False)\n",
     "\n",
     "        X = X[indices]\n",
@@ -833,7 +808,6 @@
     "            f\"Se tomó una muestra aleatoria de {sample_size} registros para la validación cruzada.\"\n",
     "        )\n",
     "\n",
-    "\n",
     "    results = {}\n",
     "\n",
     "    for k in candidate_ks:\n",
@@ -841,7 +815,6 @@
     "        avg_ll = cross_validation_log_likelihood(\n",
     "            X, k, n_folds, max_iter, tol, random_state\n",
     "        )\n",
-    "\n",
     "\n",
     "        results[k] = avg_ll\n",
     "\n",
@@ -1175,6 +1148,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **¿Cuál es mejor? ¿Por qué?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Implementación de Mixture Models (Con Librerías)\n"
    ]
   },
@@ -1307,7 +1287,6 @@
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "\n",
-    "\n",
     "gmm = GaussianMixture(n_components=6, covariance_type=\"full\", random_state=42)\n",
     "\n",
     "\n",
@@ -1327,6 +1306,13 @@
     "\n",
     "\n",
     "print(\"Silhouette Score:\", sil_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ¿Cuál implementación fue mejor? ¿Por qué?\n"
    ]
   },
   {
