--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -29,25 +29,62 @@
     "1. Explique con sus propias palabras, qué son los grafos computaciones y cuál es su importancia para el \n",
     "cálculo de gradientes en aplicaciones como backpropagation \n",
     "\n",
-    "        R//\n",
+    "        R// Los grafos computacionales representan cálculos en forma de nodos (operaciones o variables) y aristas (relaciones). En backpropagation, facilitan el cálculo de gradientes mediante la regla de la cadena, optimizando la actualización de pesos en redes neuronales. Donde esto permite entrenamientos eficientes y precisos en modelos de aprendizaje automático.\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "2. Detalle cuales son los componentes y pasos que conforman una red neuronal. Con esto en mente, ¿cómo \n",
     "mejoraría el perceptrón que hizo en el laboratorio pasado? \n",
     "\n",
-    "        R//\n",
+    "        R//Una red neuronal consta de:\n",
+    "\n",
+    "- Neuronas con pesos y sesgos.\n",
+    "- Capas: entrada, ocultas y salida.\n",
+    "- Funciones de activación (ReLU, Sigmoid, Softmax, step, signum, linear e Hiperbólica tangente).\n",
+    "- Función de pérdida y optimización mediante descenso de gradiente.\n",
+    "\n",
+    "Para mejorar mi perceptrón, agregaría capas ocultas, probaría ReLU en lugar de una función escalón y usaría descenso de gradiente estocástico (SGD) para mejor generalización.\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "3. Investigue y explique cómo se selecciona el valor K usando el método de la silueta para el algoritmo de K\n",
     "Means. Explique las fórmulas (ecuaciones) que lo componen así como las asumpciones, si hay. \n",
     "\n",
     "        R//\n",
+    "El método de la silueta mide qué tan bien están agrupados los puntos en un cluster. Se calcula como:\n",
+    "\n",
+    "$$S(i) = \\frac{b(i) - a(i)}{\\max(a(i), b(i))}$$\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "- $a(i)$ es el promedio de la distancia del punto $i$ a los demás puntos dentro de su mismo cluster.\n",
+    "- $b(i)$ es el promedio de la distancia del punto $i$ al cluster más cercano al que no pertenece.\n",
+    "\n",
+    "El valor de $S(i)$ oscila entre -1 y 1:\n",
+    "\n",
+    "- Valores cercanos a 1 indican que el punto está bien agrupado.\n",
+    "- Valores cercanos a 0 sugieren que el punto está en el límite entre dos clusters.\n",
+    "- Valores negativos significan que el punto está en el cluster equivocado.\n",
+    "\n",
+    "Para seleccionar K, probamos distintos valores y elegimos el que tenga el mayor coeficiente de silueta promedio, lo que garantiza una mejor separación de los clusters.\n",
+    "\n",
     "\n",
     "\n",
     "4. Investigue sobre Principal Component Analysis (PCA) y responda respecto a algoritmos como K-Means: \n",
     "a. ¿Cómo podría ayudarle a mejorar la calidad de sus clusters cuando se usa K-Means?\n",
     "\n",
-    "        R//"
+    "        R//\n",
+    "El Análisis de Componentes Principales (PCA) es una técnica de reducción de dimensionalidad que transforma un conjunto de variables correlacionadas en un conjunto más pequeño de variables no correlacionadas llamadas componentes principales.\n",
+    "\n",
+    "Cuando aplicamos el algoritmo de K-Means en datos de alta dimensionalidad, los clusters pueden verse afectados por el ruido y la redundancia en los datos. Aquí es donde PCA ayuda, porque:\n",
+    "\n",
+    "- Al conservar solo las componentes principales más relevantes, eliminamos características innecesarias y mejoramos la agrupación, por lo que, reducimos su dimensionalidad.\n",
+    "- Evita que K-Means agrupe puntos basándose en características redundantes, lo cual, elimina la correlación.\n",
+    "- Al trabajar con menos dimensiones, K-Means converge más rápido.\n",
+    "\n",
+    "Por lo tanto, antes de aplicar K-Means, es recomendable usar PCA para poder extraer los componentes más importantes y lograr clusters más limpios y precisos."
    ]
   },
   {
