--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -982,7 +982,8 @@
    "metadata": {},
    "source": [
     "# Definición de métrica de desempeño principal\n",
-    "### Se utilizará el coeficiente de silueta porque mide qué tan bien separados y compactos están los clusters."
+    "\n",
+    "## Se eligió BIC como métrica porque ayuda a encontrar el equilibrio perfecto entre un modelo que se ajusta bien a los datos y uno que no sea innecesariamente complicado. Básicamente, evita que el modelo sea demasiado complejo al mismo tiempo que asegura un buen rendimiento"
    ]
   },
   {
@@ -1165,6 +1166,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definición de métrica de desempeño principal\n",
+    "\n",
+    "## Se eligió BIC como métrica porque ayuda a encontrar el equilibrio perfecto entre un modelo que se ajusta bien a los datos y uno que no sea innecesariamente complicado. Básicamente, evita que el modelo sea demasiado complejo al mismo tiempo que asegura un buen rendimiento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
@@ -1192,15 +1202,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ¿Cuál implementación fue mejor? ¿Por qué\n",
+    "\n",
+    "### La implementación con librerías fue mejor porque están optimizadas para manejar cálculos complejos de manera eficiente, reduciendo errores y mejorando la precisión. Además, estas librerías ya incluyen técnicas avanzadas para calcular el BIC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ¿Cuál es mejor? ¿Por qué?  Considerando sus resultados, ¿cuándo cree que es mejor usar Mixture Models y K-Means?\n",
+    "\n",
+    "### Al comparar los resultados, Mixture Models funciona mejor que K-Means porque, en lugar de asignar cada punto a un solo grupo de manera rígida, usa probabilidades para representar mejor la diversidad de los datos. Esto permite identificar el número ideal de grupos utilizando métricas como el BIC. En resumen, Mixture Models es más útil cuando los datos tienen grupos de diferentes formas y tamaños, mientras que K-Means es una mejor opción si se busca rapidez y los grupos son más uniformes y redondeados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Referencias\n",
     "\n",
     "- RPubs - Informe #4: PCA y K-Means. (s. f.). https://rpubs.com/CarlosRodriguez_/841592\n",
     "\n",
     "- Ramirez, J. (2021, 7 diciembre). K-means: Elbow Method and Silhouette - Jonathan Ramirez - Medium. Medium. https://medium.com/@jonathanrmzg/k-means-elbow-method-and-silhouette-e565d7ab87aa\n",
     "\n",
-    "- \n",
-    "\n",
-    "- \n",
     "\n",
     "\n",
     "\n"
