--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -1226,6 +1226,17 @@
     "\n",
     "- Ramirez, J. (2021, 7 diciembre). K-means: Elbow Method and Silhouette - Jonathan Ramirez - Medium. Medium. https://medium.com/@jonathanrmzg/k-means-elbow-method-and-silhouette-e565d7ab87aa\n",
     "\n",
+    "- Irving Vasquez. (2022, 8 marzo). Tensores, gradientes y retropropagación (Backpropagation) en Pytorch [Vídeo]. YouTube. https://www.youtube.com/watch?v=t3-pTCpBiRk\n",
+    "\n",
+    "- ¿Qué es una red neuronal? - Explicación de las redes neuronales artificiales - AWS. (s. f.). Amazon Web Services, Inc. https://aws.amazon.com/es/what-is/neural-network\n",
+    "\n",
+    "- ¿Qué es una red neuronal? - Explicación de las redes neuronales artificiales - AWS. (s. f.-b). Amazon Web Services, Inc. https://aws.amazon.com/es/what-is/neural-network/\n",
+    "\n",
+    "- Ramirez, J. (2021, 7 diciembre). K-means: Elbow Method and Silhouette - Jonathan Ramirez - Medium. Medium. https://medium.com/@jonathanrmzg/k-means-elbow-method-and-silhouette-e565d7ab87aa\n",
+    "\n",
+    "- Carly L. CLayman (2020). K-means Clustering and Principal Components Analysis of Microarray Data of L1000 Landmark Genes. https://www.sciencedirect.com/science/article/pii/S187705092030404X \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
