--- a/Laboratorio04/Lab04.ipynb
+++ b/Laboratorio04/Lab04.ipynb
@@ -1236,6 +1236,10 @@
     "\n",
     "- Carly L. CLayman (2020). K-means Clustering and Principal Components Analysis of Microarray Data of L1000 Landmark Genes. https://www.sciencedirect.com/science/article/pii/S187705092030404X \n",
     "\n",
+    "- S, A. (2023). How Mixture Models Uncover Hidden Subpopulations in Machine Learning: An Introduction. [online] Medium. Available at: https://medium.com/acuity-learning/how-mixture-models-uncover-hidden-subpopulations-in-machine-learning-an-introduction-8021f614435b.\n",
+    "\n",
+    "- VanderPlas, J. (2019). In Depth: Gaussian Mixture Models | Python Data Science Handbook. [online] Github.io. Available at: https://jakevdp.github.io/PythonDataScienceHandbook/05.12-gaussian-mixtures.html.\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1259,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
